fix(vuepress-theme-default): page breaks in lists and sections

--- a/packages/@markspec/vuepress-theme-default/styles/print.styl
+++ b/packages/@markspec/vuepress-theme-default/styles/print.styl
@@ -30,19 +30,15 @@
   .page-nav
     display: none
 
-  .markdown-section-h1
-    page-break-before: always
-  .markdown-section-h2 
-    page-break-inside: avoid
-  .markdown-section-h3 
-    page-break-inside: avoid
-  .markdown-section-h4 
-    page-break-inside: avoid
-  .markdown-section-h5 
-    page-break-inside: avoid
   .markdown-section
-    pre, blockquote, table
+    .markdown-section-h1
+      page-break-before: always
+    .markdown-section-h3 
       page-break-inside: avoid
-    ol, ul
+    .markdown-section-h4 
+      page-break-inside: avoid
+    .markdown-section-h5 
+      page-break-inside: avoid
+    pre, blockquote, table
       page-break-inside: avoid
     
